--- a/dashboard/tsconfig.json
+++ b/dashboard/tsconfig.json
@@ -27,6 +27,6 @@
     }
   },
   "include": ["App.tsx", "index.tsx", "types.ts", "services", "components"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "vite.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
